syntax = "proto3";
package enterprise.license;

message LicenseLimits {
    uint32 users = 1;
    uint32 devices = 2;
    uint32 locations = 3;
    optional uint32 network_devices = 4;
}

message LicenseMetadata {
    string customer_id = 1;
    bool subscription = 2;
    optional int64 valid_until = 3;
    LicenseLimits limits = 4;
    optional int64 version_date_limit = 5;
}

message LicenseKey {
    bytes metadata = 1;
    bytes signature = 2;
}
